simplify with show remaining flow
Co-Authored-By: Alireza Ahmadi <alireza7@gmail.com>

--- a/web/translation/translate.en_US.toml
+++ b/web/translation/translate.en_US.toml
@@ -48,6 +48,7 @@
 "clients" = "Clients"
 "usage" = "Usage"
 "secretToken" = "Secret Token"
+"remained" = "Remained"
 
 [menu]
 "dashboard" = "System Status"
