--- a/web/translation/translate.ru_RU.toml
+++ b/web/translation/translate.ru_RU.toml
@@ -48,6 +48,7 @@
 "clients" = "Клиенты"
 "usage" = "Использование"
 "secretToken" = "Секретный токен"
+"remained" = "остались"
 
 [menu]
 "dashboard" = "Статус системы"
